fix(hub): file tree spacing

--- a/packages/hub/hub-ui/src/views/Home/Home.module.css
+++ b/packages/hub/hub-ui/src/views/Home/Home.module.css
@@ -6,9 +6,9 @@
 }
 
 .sidebar {
-  padding-top: 3em;
-  width: 15rem;
-  min-width: 15rem;
+  padding-top: 1em;
+  width: 12rem;
+  min-width: 12rem;
   height: 100%;
   background-color: #232323;
   position: relative;
